@@ -62,6 +62,7 @@ class Traversal {
    * @returns {Promise}
    */
   iterate() {
+    this.bytecode.addStep('none');
     return this._applyStrategies().then(() => {
       let it;
       while ((it = this._getNext()) && !it.done) {
